# haskell-web-anki

./: .gitignore  README.md  install.sh  run.sh
backend/: TAGS  backend.cabal  stack.yaml
backend/app/: Main.hs
backend/src/: Lib.hs
electron-build/: backend-exe  index.html  main.js  renderer.js
electron-build/css/: anki.css  photon.css  photon.min.css
electron-build/resources/srv/: q1.txt
electron-build/static/: backend-exe
frontend/: TAGS  bin  reflex-starter.cabal  stack.yaml
frontend/app/: ApiClient.hs  Debug.hs  Domain.hs  ElectronApi.hs  Keyboard.hs  Main.hs  Main2.hs  NlpCore.hs  NonEmpty.hs  ReflexDomApp.hs  ReflexFix.hs  Resources.hs  Services.hs  Temp.hs  UiComponents.hs  WorkflowUtils.hs
