name:                haskell-web-anki-backend
version:             0.1.0.0
synopsis:            Simple server backend for serving "flashcards".
description:         Please see README.md
homepage:            https://github.com/aamczykm/haskell-web-anki
license:             MIT
license-file:        LICENSE
author:              Michał Adamczyk
maintainer:          michal.anks@gmail.com
copyright:           2018 Michał Adamczyk
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , wai
                     , warp
                     , text
                     , filepath
                     , directory
  default-language:    Haskell2010

executable backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backend
  default-language:    Haskell2010

test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backend
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamczykm/haskell-web-anki
