name:                haskell-web-anki-frontend
version:             0.1.0.0
synopsis:            Client side of simple web applictaion serving memorization flashcards.
-- description:
homepage:            https://github.com/adamczykm/haskell-web-anki
license:             MIT
license-file:        LICENSE
author:              Michał Adamczyk
maintainer:          michal.anks@gmail.com
copyright:           2018 Michał Adamczyk
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-web-anki-frontend
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  if impl(ghcjs >= 0.2.1)
    ghcjs-options:     -dedupe

  build-depends:       base
                     , ghcjs-base
                     , ghcjs-dom
                     , reflex >= 0.5.0
                     , reflex-dom >= 0.3
                     , containers >= 0.5
                     , singletons
                     , vinyl
                     , text >= 1.2
                     , free
                     , filepath
                     , directory >= 1.2
                     , lens
                     , mtl
                     , time
                     , these
                     , aeson
                     , random-shuffle
                     , MonadRandom
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/adamczykm/haskell-web-anki